# Stream

./: README.md
backend/: .gitignore  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3388a6484fe5_add_anime_and_series_tables_2.py  9b6c2a5fda0c_add_anime_and_series_tables.py
backend/src/: config.py  loader.py  main.py
backend/src/api/: comments.py  streaming.py  users.py
backend/src/auth/: AuthUtils.py  CustomAPIRoute.py
backend/src/cache/: redis.py
backend/src/database/: Crud.py  db_manager.py  enums.py  init_db.py  models.py  models_dimflix.py  triggers.py
backend/src/database/cruds/: __init__.py  account_chats.py  accounts.py  chats.py  payment_history.py  tariffs.py  task_process_history.py  tasks.py  topics.py  users.py
backend/src/database/errors/: base.py  errors.py
backend/src/parser/: parser.py  test.py
backend/src/parser/torrent/: QbitTorrent.py  Torrent.py
backend/src/schemas/: Anime.py  User.py
backend/src/storage/: LocalStorage.py  Storage.py
backend/src/utils/: ConnectionManager.py  utils.py
backend/tests/: anime_data.json  db.py  jikan.py  tests.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/api/: auth.ts  mainPage.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: anime_card.vue  cover_card.vue  filter.vue  header.vue  search.vue  search_card.vue
frontend/src/models/: auth.ts  mainPage.ts
frontend/src/router/: index.ts
frontend/src/svg/: filter.vue
frontend/src/views/: AboutView.vue  HomeView.vue  anime_page.vue  (+3 more)
(+3 files in other folders)
