[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "aioredis>=2.0.1",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.11",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "uvloop>=0.21.0",
]
